feat : Text Question to pdf download

--- a/services/serviceConfig.json
+++ b/services/serviceConfig.json
@@ -9,7 +9,11 @@
     }
   },
   "tags": {
-    "question": "\\question",
-    "header": "\\header"
+    "question":{
+      "basic":"\\question"
+    },
+    "header":{
+      "basic":"\\header"
+    }
   }
 }
